# mcp-agent-memory-pro

./: .env.example  .gitignore  .markdownlint.json  CHANGELOG.md  README.md  design.md  eslint.config.js  jest.config.js  lefthook.yml  package-lock.json  package.json  pyproject.toml  requirements.md  tasks.md  test_phase5.db  tsconfig.json
.agent/: ARCHITECTURE.md
.agent/agents/: backend-specialist.md  database-architect.md  (+8 more)
data/: memories.db
docs/: API.md  COGNITIVE_FEATURES.md  COMPLETE_SYSTEM_GUIDE.md  CONFIGURATION.md  DEPLOYMENT_GUIDE.md  ECOSYSTEM_GUIDE.md  PHASE2_ARCHITECTURE.md  PHASE2_VALIDATION.md  PHASE3_ARCHITECTURE.md  PHASE3_VALIDATION.md  PHASE5_ARCHITECTURE.md  PHASE5_ECOSYSTEM.md  PLAN.md  PRODUCTION_CHECKLIST.md  TROUBLESHOOTING.md  WORKERS_GUIDE.md
poc/: 01-mcp-hello.ts  02-sqlite-test.ts  03-lancedb-test.ts  04-embedding-test.py  05-python-bridge-test.ts  requirements.txt  validate-all.sh  validation-report.json
python/: __init__.py  config.py  embedding_service.py  init_db.py  models.py  requirements-cognitive.txt  requirements-phase4.txt  requirements-phase5.txt  requirements-workers.txt  requirements.txt  run_workers.py  worker_manager.py
scripts/: backup.sh  check-env.sh  cleanup.sh  monitor-workers.sh  reset-data.sh  restore.sh  start-api.sh  start-services.sh  start-workers.sh  stop-services.sh  stop-workers.sh  validate-all.sh  validate-phase2.sh  validate-phase3.sh  validate-phase5.sh  validate_phase5.py
src/: cli.ts  index.ts  server.ts
tests/: phase5-validation-report.json  setup.ts  test_placeholder.py  validation-report.json
(+277 files in other folders)
